@@ -1,3 +1,3 @@
-nvidia-kernel.modules-2.6 /etc/modprobe.d/
+nvidia-kernel-nkc.conf	/etc/modprobe.d/
 nvidia_helper.ck /usr/lib/ConsoleKit/run-seat.d/
 nvidia_helper /lib/udev/
